Fixed text on splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PawtyTime</string>
+    <string name="tagline">Let\'s get this pawty started!</string>
 </resources>
