--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">PawtyTime</string>
     <string name="tagline">Let\'s get this pawty started!</string>
+    <string name="welcome_title">Welcome to PawtyTime!\nPlease log in or create an\naccount to get started!</string>
+    <string name="continue_google">Log in with Google</string>
+    <string name="continue_facebook">Log in with Facebook</string>
+    <string name="login_with_email">Log in with Email:</string>
+    <string name="hint_email">email or username</string>
+    <string name="hint_password">password</string>
+    <string name="login">Log In</string>
+    <string name="or">Or</string>
+    <string name="create_account">Create Account</string>
 </resources>
