--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,14 @@
     <string name="events_tab">Events</string>
     <string name="map_tab">Map</string>
     <string name="shop_tab">Shop</string>
+    <string name="profile">Profile</string>
+    <string name="settings">Settings</string>
+    <string name="example_profile">Kely Amin</string>
+    <string name="account_settings">Account Settings</string>
+    <string name="edit">Edit</string>
+    <string name="view">View</string>
+    <string name="calendar">Your Calendar</string>
+    <string name="dropdownIcon">Open Dropdown</string>
+    <string name="pet_profile_dropdown">Pet Profile(s)</string>
+    <string name="profile_dropdown">Profile</string>
 </resources>
