--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,8 @@
     <string name="cd_save">Save</string>
     <string name="cd_expand_comments">Expand comments</string>
     <string name="like_count_zero">0</string>
+    <string name="create_post">Create post</string>
+
 
     <!-- UI text -->
     <string name="follow">Follow</string>
@@ -101,7 +103,5 @@
     <string name="comments_placeholder">23 comments</string>
     <string name="sample_name">Rufus</string>
     <string name="sample_miles">2.1 mi</string>
-
-    <!-- Item Post -->
 
 </resources>
