--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="shop_tab">Shop</string>
     <string name="profile">Profile</string>
     <string name="settings">Settings</string>
-    <string name="example_profile">Kely Amin</string>
+    <string name="example_profile">Loading...</string>
     <string name="account_settings">Account Settings</string>
     <string name="edit">Edit</string>
     <string name="view">View</string>
