Updated fonts and text colors on home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
     <string name="cd_profile_button">Profile button</string>
     <string name="cd_logo">PawtyTime logo</string>
     <string name="for_you">For You</string>
-    <string name="recommended_profiles">Recommended profiles</string>
+    <string name="recommended_profiles">Recommended Profiles</string>
     <string name="cd_more">See more</string>
     <string name="cd_avatar">Author avatar</string>
     <string name="cd_post_image">Post image</string>
