edited font and text color on the create a post screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="create_account">Create Account</string>
     <!-- Added Logout Button string -->
     <string name="logout">Logout</string>
+    <string name="create_caption">Write a Caption</string>
 
 
     <string name="pawty_people_title">Pawty People</string>
