--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,6 +95,7 @@
     <string name="cd_expand_comments">Expand comments</string>
     <string name="like_count_zero">0</string>
     <string name="create_post">Create post</string>
+    <string name="cd_like_comment">Like comment</string>
 
 
     <!-- UI text -->
