updated interested and going counts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <!-- UI hints & labels -->
     <string name="hint_search">Search</string>
+    <string name="hint_search_zip">Search Zip</string>
     <string name="tip_profile_settings">Tap your photo to open Profile &amp; Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home_tab">Home</string>
